fix: submit row fixed z-index

--- a/baton/static/baton/app/src/styles/_placeholders.scss
+++ b/baton/static/baton/app/src/styles/_placeholders.scss
@@ -950,7 +950,7 @@
       position: fixed;
       transition: padding 0.2s linear;
       width: 83.33333333%;
-      z-index: 100;
+      z-index: 1000;
     }
   }
 }
